# atlys-scraper

./: .gitignore  .gitignore   README.md  pyproject.toml
app/: app_factory.py  app_lifespan.py  logger.py  test_scripts.py
app/api/: middleware.py  router.py
app/api/endpoints/: product.py  router.py
app/core/: config.py  constants.py
app/core/datastore/: __init__.py  base_cachestore.py  base_database.py  base_filestore.py  local_database.py  local_filestore.py  redis_cachestore.py
app/core/dependencies/: __init__.py  authentication.py  service_dependencies.py  shared_dependencies.py
app/core/models/: __init__.py  notification.py  product.py
app/core/notifications/: __init__.py  base_notifier.py  console_notifier.py  notification_sender.py
app/core/services/: __init__.py  base.py  product.py
app/task_queue/: celery_app.py
app/task_queue/tasks/: notification_send.py  run_scrape_task.py
