[tool.poetry]
name = "atlys-bhavesh"
version = "0.1.0"
description = ""
authors = ["igneel777 <navandarbhavesh@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
celery = "^5.4.0"
redis = "^5.2.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
